# Soteropolis

./: CMakeLists.txt  README.md  Soteropolis.sln
Soteropolis/: CMakeLists.txt  Engine.cpp  Engine.hpp  Soteropolis.filters  Soteropolis.vcxproj  Utils.cpp  Utils.hpp  Voronoi2D.cpp  Voronoi2D.hpp  main.cpp  stdafx.cpp  stdafx.h
cmake/Modules/: FindCGAL.cmake
